--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express-session": "^1.17.3"
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "js-cookie": "^3.0.5"
   }
 }
