--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
-    "js-cookie": "^3.0.5"
+    "js-cookie": "^3.0.5",
+    "nouislider": "^15.7.1"
   }
 }
